<resources>
    <string name="app_name">أبطال المدينة</string>
    <string name="title">تعرف على رواد النجاح والالهام</string>
    <string name="dic_one">
        في هذا التطبيق سوف تتعرف على شخصيات عدة من افضل وأروع الأشخاص الناجحين عالميا. وقد قرروا مساعدة الناس من خلال محاضرات على ارض الواقع وفديوهات على منصات االتواصل الأجتماعي. من خلال فديوهاتهم دائما ما يحاولون توصيل رسالة قيمة الى كل شخص سعى الى النجاح. وستتعرف عليهم من خلال قسم الفديوهات. وبالتالي سوف تكسب معلومات كثيرة لتطوير نفسك. </string>
    <string name="title_forIntro">مقدمة عن التطبيق</string>
    <string name="title2">تصفح وحمل الكتب التي تريدها</string>
    <string name="dic_two">"من خلال هذا قسم المكتبة سوف يتيح لك عن المشاركة في الكتب علمية أو الادبية أو الفلسفية.  وبالتأكيد سوف يكون هناك خاصية قراءة الكتاب من عدة برامج يمكنك اختيارها. فضلا عن هذا سوف يكون هنالك معلومات عن اشهر الكتاب وحياتهم. اشهر المكاتب بالعالم.  "</string>
    <string name="previoce">السابق</string>
    <string name="title3">قسم الدراسة</string>
    <string name="dis_three">من خلال قسم الدراسة يمكنك معرفة العديد من التعريفات للكثير من المواضيع لذلك سوف تكون فرصة ممتازة اذا اردت ان تعلم كيف تعبر عن علموم معينة في الحياة الواقعية فضلا عن اقسام هذا العلم وفك بعض الأوهام والعقد التي تجعل هذا العلم يبدوا سيء او ربما يبدوا مخالف للكثير من الثقافات. لذا من المهم دائما الألتزام بالمعرفة عن العلوم من خلال شرح اشخاص من الباحثين في هذه المجالات.
    </string>
    <string name="email_hint">البريد الالكتروني</string>
    <string name="password_text">كلمة المرور</string>
    <string name="mainForm_button">التسجيل</string>
    <string name="makeAccount_text">انشاء حساب</string>
    <string name="return_password_text">استعادة كلمة المرور</string>
    <string name="first_content">imgOne</string>
    <string name="socialMedia">التسجيل عن طريق </string>
    <string name="reset">تغيير كلمة المرور</string>
    <string name="done_new_pass">تم</string>
    <string name="email_error">لايمكن ترك الحقل فارغ</string>
    <string name="second_content">second_pic</string>
    <string name="makeit_asUser">انشاء حساب كمستخدم</string>
    <string name="logAs_user">المتابعة</string>
    <string name="makeit_asAdimn">انشاء حساب كمشرف</string>
    <string name="rj_button">انشاء الحساب</string>
    <string name="name">الأسم</string>
    <string name="confirm">تأكيد كلمة المرور</string>
    <string name="city">المدينة</string>
    <string name="age">العمر </string>
    <string name="create_account">تم انشاء الحساب بنجاح</string>
    <string name="account_exisit">هذا الحساب موجود</string>
    <string name="check_problem">تأكد من المعلومات او الاتصال بالانترنت</string>
    <string name="data_saved">تم حفظ البيانات</string>
    <string name="intro_pic">Intro_pic</string>
    <string name="pharagraph">"في هذه الخطوة سوف يتم أظهار فديوهات تفيد في الحياة اليومية وتنمي من مهاراتك فضلا عن ذلك سوف تشعرك بنوع من الحماس والالهام لكي تتجهز بالعلم للعديد من المواضيع  بعدها يمكنك متابعة المواد العلمية او الادبية التي تحبها وسوف تستطيع ان تدخل الى المكتبة الالكترونية في هذا التطبيق لكي تحمل الكتب التي تحمل فائدة معينة وسوف تتعرف على اناس جدد يحبون الثقافة ومتعطشين للعلم. كما سيتيح لك هذا التطبيق التعرف على اشخاص ذو خبرة عالية ومختصين في العلوم والاداب المختلفة. "</string>
    <string name="Intro_button">المتابعة</string>
    <string name="account">الحساب</string>
    <string name="study_section">قسم الدراسة</string>
    <string name="lab_section">المكتبة</string>
    <string name="request">المساعدة</string>
    <string name="about">عن المبادرة</string>
    <string name="team">مبرمج التطبيق</string>
    <string name="signout">تسجيل الخروج</string>
    <string name="editic">تعديل</string>
    <string name="informations">المعلومات</string>
    <string name="aziz">Abdalaziz Khalid Khalifa</string>
    <string name="about_cfi">وهي مبادرة إنسانية غير ربحية تهدف الى خدمة المجتمع عن طريق البرمجة Programming. تعتبر “Code For IRAQ” مبادرة تعليمية حقيقية ترعى المهتمين بتعلم تصميم وبرمجة تطبيقات الهاتف الجوال ومواقع الانترنت وبرامج الحاسوب والشبكات والاتصالات ونظم تشغيل الحاسوب باستخدام التقنيات مفتوحة المصدر Open Source ، كما توفر لهم جميع الدروس التعليمية اللازمة وبشكل مجاني تماماً ، حيث يتسنى لطالب العلم أن يكتسب الخبرة العملية أثناء وبعد فترة الدراسة وذلك ليسهل عليه ايجاد الوظيفة وبشكل سريع بعد التخرّج وتهدف هذه المبادرة الى تحويل المجتمع من مجتمع سلبي مستهلك الى مجتمع ايجابي منتج يعتمد بالدرجة الاساس على استثمار العقول والخبرات والمهارات بغض النظر عن العمر او التخصص بل الاهم من ذلك تعتمد على مبدأ المواطنة والمشاركة الفاعلة في تأسيس وبناء المجتمع تدعو هذه المبادرة جميع الطلبة والخريجين والهواة والأساتذة الجامعيين والمهتمين مجال البرمجة وتقنيات المعلومات وكذلك الاختصاصات الاخرى الى التطوع والمشاركة الفعلية لأجل الارتقاء بواقع البلد ، حيث تعتبر فرصة عظيمة لاكتساب الخبرة والمهارة عن طريق تصميم وتنفيذ برامج وتطبيقات خدمية من شأنها خدمة المواطن وذلك ضمن مجاميع عمل نشطة وفعّالة يتعاون فيها جميع الأفراد كفريق واحد يتبادل الاراء والخبرات ويطرح الافكار لتتم مناقشتها وتطبيقها على أرض الواقع ، كما تفتح المجال لجميع المواطنين العراقيين ومن جميع الاختصاصات إلى المشاركة الفاعلة في هذه المشاريع لرفد الفريق بالخبرات والافكار والاراء والمقترحات التي من شأنها خدمة المجتمع بأفضل ما يمكن. لا يخفى على أحد أن لمثل هذه المبادرات دور رئيسي في تحسين ورفع اقتصاد البلد ، حيث يتم فيها إبراز المقدرة الحقيقية والذكاء الحقيقي للمواطن العراقي مما يساعد على استقطاب الخبرات المحلية وتوظيفها بدلاً عن استيراد الخبرات الاجنبية والتي عادة ما تكون مكلفة جداً للشركات والمؤسسات الحكومية والأهلية وجميع القطاعات العاملة في البلد والتي قد لا تظاهي أحيانا خبرة وكفاءة وإخلاص المواطن العراقي ، كما إن سيطرة الشركات والعمالات الأجنبية على سوق العمل العراقي ساهم في تقليص فرص التوظيف بشكل هائل نتج عنه عدد كبير من الافراد العاطلين عن العمل من ذوي الخبرات والشهادات والاختصاصات المختلفة ، وهنا يأتي دور الجامعات والمؤسسات والشركات العراقية في التثقيف والتطوير والمشاركة في تغيير وتحسين القوة الاقتصادية والعلمية للبلد ورفع مكانته بين البلدان الاخرى</string>
    <string name="vieos">الصفحة الرئيسية</string>
    <string name="help_cleify">في هذا القسم سوف يتم طرح التعليقات الموجودة على متجر او على الصفحة نفسها سواء كانت برمجية او حتى انسانية لكي يتمكن الجميع من المساعدة او اعطاء ارائهم</string>
    <string name="title_for_frag7">العنوان</string>
    <string name="title_for_frag7_t">توضيح</string>
    <string name="lab">المكتبة</string>
    <string name="communication">التواصل</string>
    <string name="frag_videos">الأطلاع على الفديوهات</string>
    <string name="listViewT">العنوان</string>
    <string name="listViewT1">الموضوع</string>
    <string name="toggle1">toggle bar is open</string>
    <string name="toggle2">toggle bar is close</string>
    <string name="frag_study">الأطلاع على المواضيع</string>
    <string name="button_listView">المكتبة</string>
    <string name="logout">تم تسجيل الخروج</string>
    <string name="app_pupros"> ما هو الغرض من هذا التطبيق ؟ </string>
    <string name="app_pur_answer">غرض هذا التطبيق كانت لنشر الوعي والعلوم والثقافات الأخرى واحترام الآراء. واهم شيء ان نثبت من خلال هذه التطبيقات الكثيرة ان الأنسانية لم تموت. </string>
    <string name="howToUse">كيف استخدم هذا التطبيق؟</string>
    <string name="howToUse_answer">في البداية يمكنك متابعة التقدم الى وصولك لصفحة التسجيل عند صفحة التسجيل هنالك خيار لتسجيل الدخول عند تسجيل دخولك كمستخدم عادي سوف تحفظ معلوماتك على قاعدة البيانات ويمكنك تعديل على المعلومات من خلال قسم الحساب لذلك عند تسجيل الخروج ليس من الضروري انشاء حساب جديد.</string>
    <string name="videos_purpose">فائدة الفديوهات؟</string>
    <string name="videos_purpose_answer">من الطبيعي دائما ان الانسان بحاجة الى نوع من التشجيع والتحفيز لبدأ عمل معين او هواية معينة لذا حاولت أن اقدم لكم اكثر الشخصيات التي سوف تساعدك في رحلتك الى هدفك.احد ابرز الشخصيات في عالم العربي في مجالاتهم وافكارهم. </string>
    <string name="study_purpose">فائدة قسم الدراسة؟</string>
    <string name="study_purpose_answer">فائدة قسم الدراسة بسيط جدا يساعد في فهم تعريف علوم معينة او من المواضيع الأخرى ويحتوي على اقسام هذا الموضوع واشهر علمائه وبعض الكتب المهمة والتي تشرح أساسه.</string>
    <string name="dr_name">د.أبراهيم محمد السيد الفقي</string>
    <string name="disOne">"احد اشهر وافضل الاساتذة في علم النفس والبرمجة الغوية العصبية ورئيس مجلس ادارة المركز الكندي للتنمية البشرية وموؤسس ورئيس مجلس وادارة مجموعة شركات ابراهيم الفقي العالمية.  "</string>
    <string name="titleTwo">من اشهر فديوهاته</string>
    <string name="disTwo">كيف تبدأ من الصفر</string>
    <string name="MuhammedEssa">محمد عيسى</string>
    <string name="dis1">القناة يهدف لتعليم جميع لغات البرمجة منها الويب والكومبيوتر واجهزة الهواتف واللوحية وجميع الشهادات الي تخص اللغات والسيرفرات بانواعها</string>
    <string name="dis2">Java Tutorial</string>
    <string name="Karisma">كاريزما بالعربي</string>
    <string name="dis3"> صناعة الشخصية القوية الجذابة في أسرع وأبسط وقت ممكن فيديو جديد كل يوم إثنين وفديوهات جميلة عن لغة الجسد والكثير من النصائح لتجنب تدمير شخصيتك </string>
    <string name="dis4">تطوير الشخصية للأنطوائيين</string>
    <string name="Abdullah">عبدالله رشدي</string>
    <string name="dis5">القناة الرسمية للدكتور عبدالله رشدي شرح الأمور المتعلقة بالدين وتدمير الشبهات وتعلم اساسيات الدين ومناظرات مع اصحاب الديانات الأخرى والملحدين</string>
    <string name="dis6">المذاهب الأسلامية</string>
    <string name="Misaha">مساحة</string>
    <string name="dis7">انا يوسف أعبو من المغرب  , أحب الكتب والعلوم بالخصوص الفيزياء والفلك , قناتي فيها سلطة مواضيع , ببساطة مساحة تعتبر ثاني اكسيد الترفيه اه نسيت أحب القهوة أيضا ادخل وتفقد القناة</string>
    <string name="dis8">هل الله موجود</string>
    <string name="Abdalkhaliq">بيت القصص</string>
    <string name="dis9">بيت القصص قناتي أتكلم فيها عن قصص واقعية ، خيالية ، ظواهر غريبة ، مواضيع مُثيرة للأهتمام أذا كُنت من مُحبي هذا النوع من المحتوى .. فأشترك بالقناة</string>
    <string name="dis10">شخصيات</string>
    <string name="Scoory">سكوري</string>
    <string name="dis11">صانع محتوى عراقي راقي جدا ومن النادرين في هذا المحتوى شغفه بالمرئيات والصوتيلت جعل منه ايقونة في اليوتيوب العراقي خاصة والعربي عامة</string>
    <string name="dis12">تعليم</string>
    <string name="title_study_section">العلوم</string>
    <string name="defination1">العلوم هي المعارف والإكتشافات التي يتوصل إليها العلماء حول الكون بواسطة التجارب والتفكير، أي بواسطة أدلة وبراهين, غير الخرافات التي هي إعتقادات غير منطقية كان يفسر بها الإنسان البدائي الظواهر الطبيعية.</string>
    <string name="first_sec">العلوم المُجرَّدة:
        وتقوم على دراسة العلاقات بين الكميّات والأرقام، ومن الأمثلة على ذلك علوم الرياضيات والإحصاء. </string>
    <string name="nb_books">الكتب</string>
    <string name="nb_fame">أشهر الكتاب</string>
    <string name="nb_rec">المكاتب العالمية</string>
    <string name="add">اضافة صورة</string>
    <string name="add_file">اضافة ملف</string>
    <string name="show">عرض الملف</string>
    <string name="test">تم</string>
    <string name="title_for">Title</string>
    <string name="content_toCustom">custom</string>
    <string name="next">المتابعة</string>
    <string name="lab_appbar">المكتبة</string>
    <string name="lab_button">المتابعة</string>
    <string name="Account">الحساب</string>
    <string name="title_activity_labirary">Labirary</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="scines_section">اقسام العلوم</string>
    <string name="second_sec">العلوم الاجتماعية:  وتتضمن دراسة الأنشطة الاجتماعية للإنسان بالاعتماد على العادات وعلم المنطق، ومن الأمثلة على ذلك علم الاجتماع، والعلوم السياسية، وعلم الاقتصاد، وعلم الجغرافيا. </string>
    <string name="therd_sec">وغيرها</string>
    <string name="press">اضغط هنا للأطلاع الكامل على الموضوع</string>
    <string name="add_discription">ادخل وصف مختصر للكتاب</string>
    <string name="codeForIraq">Code_For_Iraq</string>
    <string name="nothingEx">لايوجد أسم</string>
    <string name="in_progress">الملف قيد الرفع</string>
    <string name="uplaod_done">تم رفع الملف</string>
    <string name="loign_done">تم تسجيل الدخول</string>
    <string name="try_again">حاول مرة اخرى</string>
</resources>