<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/pur_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="right"
                    android:text="@string/app_pupros"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pur_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"
                    android:text="@string/app_pur_answer"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/howToUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="right"
                    android:text="@string/howToUse"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/howToUse_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"
                    android:text="@string/howToUse_answer"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/videos_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="right"
                    android:text="@string/videos_purpose"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/videos_purpose_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"
                    android:text="@string/videos_purpose_answer"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/study_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="right"
                    android:text="@string/study_purpose"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/study_purpose_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"
                    android:text="@string/study_purpose_answer"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>




        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>