<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <ImageView
                android:id="@+id/first_img"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:contentDescription="@string/first_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_login_form"

                style="@style/images"

                />

            <EditText
                android:id="@+id/email"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/pass_word"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                />


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/login"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:onClick="setButton"
                android:text="@string/mainForm_button" />

            <TextView
                android:id="@+id/password_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"

                android:text="@string/return_password_text"
                android:textColor="#3042A6"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/make_anAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makeAccount_text"
                android:layout_gravity="center_horizontal"
                android:textColor="#3F51B5"
                android:textSize="16sp"

                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/socialMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socialMedia"
                android:layout_marginTop="15dp"
                android:textSize="16sp"

                android:gravity="center_horizontal"



                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/googleButton"
                    style=' style="?android:attr/borderlessButtonStyle"'
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_3oogle"

                    />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>