<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CityHeros.ABC_Register.Rejester_Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/name_rj"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_person"
                android:hint="@string/name"
                android:inputType="textPersonName"

                />

            <EditText
                android:id="@+id/email_rj"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/pass_word_rj"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/password_text"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password_rj"
                style="@style/edittexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/confirm"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/age_rj"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:drawableRight="@drawable/ic_person"
                    android:hint="@string/age"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/city_rj"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:drawableRight="@drawable/ic_location"
                    android:hint="@string/city"
                    android:inputType="textPersonName" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="top"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/rj_buuton"
                    style="@style/buttons"
                    android:layout_width="wrap_content"

                    android:layout_height="45dp"
                    android:text="@string/rj_button" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>