<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CityHeros.ABCD_FragOfMenu.A_CInformations">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:padding="16dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/study_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="5dp"
                        android:text="@string/title_study_section"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/study_dis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:padding="5dp"
                        android:text="@string/defination1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/study_titleTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:padding="5dp"
                        android:text="@string/scines_section"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/study_disTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:padding="5dp"
                        android:text="@string/first_sec"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/goToWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:padding="5dp"
                        android:text="@string/press"
                        android:textColor="#3F51B5"
                        android:textSize="18sp" />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>

